--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -134,7 +134,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/VRTemplate/Maps/VRTemplateMap.VRTemplateMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
+GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/NewChar/BP_CustomGameMode.BP_CustomGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
@@ -348,3 +348,4 @@ FFRLevel=FFR_Medium
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/hometsak")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/hometsak")
+
